// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Message when state = error 1`] = `
{
  "children": [
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "name": "Some error message.",
      "role": "StaticText",
    },
  ],
  "name": "",
  "role": "alert",
}
`;

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Message when state = success 1`] = `
{
  "children": [
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "name": "Some success message.",
      "role": "StaticText",
    },
  ],
  "name": "",
  "role": "status",
}
`;

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Textarea when state = error 1`] = `
{
  "invalid": "true",
  "multiline": true,
  "name": "Some label. Some error message.",
  "role": "textbox",
}
`;

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Textarea when state = none 1`] = `
{
  "multiline": true,
  "name": "Some label",
  "role": "textbox",
}
`;

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Textarea when state = success 1`] = `
{
  "multiline": true,
  "name": "Some label. Some success message.",
  "role": "textbox",
}
`;

exports[`accessibility should expose correct accessibility tree properties in error state: Of Message 1`] = `
{
  "children": [
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "name": "Some error message",
      "role": "StaticText",
    },
  ],
  "name": "",
  "role": "alert",
}
`;

exports[`accessibility should expose correct accessibility tree properties in error state: Of Textarea 1`] = `
{
  "invalid": "true",
  "multiline": true,
  "name": "Some label. Some error message",
  "role": "textbox",
}
`;

exports[`accessibility should expose correct accessibility tree with description text 1`] = `
{
  "multiline": true,
  "name": "Some label. Some description",
  "role": "textbox",
}
`;

exports[`accessibility should expose correct initial accessibility tree 1`] = `
{
  "multiline": true,
  "name": "Some label",
  "role": "textbox",
}
`;
